<resources>
    <string name="app_name">My Monitoring</string>

    <string name="sebelum_login_pastikan_anda_memasukan_n_nrp_dan_password_dengan_benar">Sebelum Masuk, Pastikan Anda Memasukan \n NRP dan Password Dengan Benar</string>
    <string name="selamat_datang">SELAMAT DATANG</string>
    <string name="nrp">NRP</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Sign In</string>
    <string name="monitoring_npengamanan_objek_vital_npolda_kalimantan_tengah">MONITORING\nPENGAMANAN OBJEK VITAL\nPOLDA KALIMANTAN TENGAH</string>
    <string name="welcome">Selamat Datang,</string>
    <string name="names">Ahmad Jumaidi</string>
    <string name="NRP">1234567890</string>
    <string name="informasi_detail_laporan">Informasi Detail Laporan</string>
    <string name="Judul_laporan">Laporan</string>
    <string name="tanggal_pelaporan">Tanggal Pelaporan</string>
    <string name="deskripsi_singkat_laporan">Deskripsi Singkat Laporan</string>
    <string name="judul_laporan">Judul Laporan</string>
    <string name="input_laporan">Input Laporan</string>
    <string name="pilih_file_upload">Pilih File Upload</string>
    <string name="kirim_laporan">Kirim Laporan</string>
    <string name="upload_laporan_kejadian">Upload Laporan Kejadian</string>
    <string name="profile_user">Profile\nUser</string>
    <string name="akses_cctv">Akses\nCCTV</string>
    <string name="keluar_aplikasi">Keluar\nAplikasi</string>
</resources>