<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/monitoring_npengamanan_objek_vital_npolda_kalimantan_tengah"
                android:textAlignment="center"
                android:textColor="@color/black_one"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_margin="24dp"
                android:src="@drawable/logo_banner" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_black"
                android:text="@string/selamat_datang"
                android:textAlignment="center"
                android:textColor="@color/black_one"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/sebelum_login_pastikan_anda_memasukan_n_nrp_dan_password_dengan_benar"
                android:textAlignment="center"
                android:textColor="#A7A4A4"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/idTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/nrp">

                <EditText
                    android:id="@+id/idTextInputNRP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PassTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/enter_password"
                app:endIconMode="password_toggle">

                <EditText
                    android:id="@+id/idTextInputPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/sign_in"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/red_rounded_solid"
                android:drawableLeft="@drawable/baseline_touch_app_24"
                android:fontFamily="@font/roboto_black"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="Version.1.0"
                    android:textAlignment="center"
                    android:textColor="#A7A4A4"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>